# MTGManager

./: .gitignore  .pre-commit-config.yaml  README.md  imports.ipynb  makefile  pyproject.toml  requirements.txt  ruff.toml  setup.py
MTGManager/display/: momir.tex
MTGManager/sources/: interface.py
ManageMTG/datasets/: DataSource.py  dlens.py
ManageMTG/display/: momir.tex
NZMTG/sources/: cardkingdom.py  interface.py
data/: MomirVig.csv  all_set_by_name.txt  all_set_data.txt  extra_set_symbols.txt
mtg-management/: AtomicImport.ipynb
mtg-management/datasets/: DataSource.py  import.py
mtg-management/inDesign/: AllMerge.indd  Combined.indb  SetFormat.indd  TableOfContents.indd
mtg_management/collection_management/: manage.py
mtg_management/collection_management/cards/: views.py
mtg_management/collection_management/collection_management/: asgi.py  urls.py  wsgi.py
src/data/: all_list.txt
src/inDesign/: AllFormat.indd  AllSingle.indd  Title.indd
src/nzmagic/: card.py  cardkingdom.py  ck.py  dlens.py  downloads.py  shopify.py  utils.py
src/nzmtgprice/: db.sqlite3  manage.py
src/nzmtgprice/nzmtgprice/: asgi.py  settings.py  urls.py  wsgi.py
src/nzmtgprice/prices/: models.py  views.py
