[project]
name = "budgetmtg"
description = "A small example package"
authors = [{ name = "Luke Trenberth", email = "luketrenberth@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "fastparquet",
    "pandas",
    "pyarrow",
    "pylint",
    "pytest",
    "requests",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "budgetmtg.version"}
readme = {file = "README.txt"}