[project]
name = "NZMTG"
description = "A small example package"
authors = [{ name = "Luke Trenberth", email = "luketrenberth@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fastparquet",
    "pandas",
    "pyarrow",
    "pylint",
    "pytest",
    "requests",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
test = ['pytest']

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.setuptools.dynamic]
version = {attr = "MTGManager.version"}
readme = {file = "README.txt"}
